cmake export common module

--- a/src/apollo/modules/common/CMakeLists.txt
+++ b/src/apollo/modules/common/CMakeLists.txt
@@ -11,3 +11,23 @@ add_subdirectory(adapters) #done
 add_subdirectory(vehicle_state) #done
 add_subdirectory(vehicle_model) #done
 
+add_library(common INTERFACE)
+target_link_libraries(common INTERFACE
+        common_proto
+        common_adapters_module
+        common_configs_module
+        common_math_module
+        common_status_module
+        common_time_module
+        common_util_module
+        common_vehicle_model_module
+        common_vehicle_state_module
+        )
+
+install(TARGETS common
+        EXPORT  apollo-export
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION .
+)
