--- a/src/apollo/modules/common/util/testdata/CMakeLists.txt
+++ b/src/apollo/modules/common/util/testdata/CMakeLists.txt
@@ -11,7 +11,14 @@ target_link_libraries(common_util_proto ${PROTOBUF_LIBRARIES}
                                         common::proto)
 add_library(common::util_proto ALIAS common_util_proto)
 
+add_library(common_util_proto_module INTERFACE)
+target_link_libraries(common_util_proto_module INTERFACE
+        common_util_proto
+        )
+
 install(TARGETS common_util_proto
+                common_util_proto_module
+        EXPORT  apollo-export
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
