--- a/src/apollo/modules/common/vehicle_model/proto/CMakeLists.txt
+++ b/src/apollo/modules/common/vehicle_model/proto/CMakeLists.txt
@@ -11,7 +11,14 @@ target_link_libraries(common_vehicle_model_config_proto
         ${PROTOBUF_LIBRARIES})
 add_library(common::vehicle_model_config_proto ALIAS common_vehicle_model_config_proto)
 
+add_library(common_vehicle_model_config_proto_module INTERFACE)
+target_link_libraries(common_vehicle_model_config_proto_module INTERFACE
+        common_vehicle_model_config_proto
+        )
+
 install(TARGETS common_vehicle_model_config_proto
+                common_vehicle_model_config_proto_module
+        EXPORT  apollo-export
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
