--- a/src/apollo/modules/common/vehicle_state/CMakeLists.txt
+++ b/src/apollo/modules/common/vehicle_state/CMakeLists.txt
@@ -11,9 +11,17 @@ target_link_libraries(common_vehicle_state_provider cyber::common
                                                     localization::localization_common)
 
 add_library(common::vehicle_state_provider ALIAS common_vehicle_state_provider)
+
+add_library(common_vehicle_state_module INTERFACE)
+target_link_libraries(common_vehicle_state_module INTERFACE
+        common_vehicle_state_provider
+        )
+
 install(TARGETS common_vehicle_state_provider
-LIBRARY DESTINATION lib
-ARCHIVE DESTINATION lib
-RUNTIME DESTINATION bin
-INCLUDES DESTINATION .
-)
+                common_vehicle_state_module
+        EXPORT  apollo-export
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION .
+        )
