--- a/src/apollo/modules/common/vehicle_model/CMakeLists.txt
+++ b/src/apollo/modules/common/vehicle_model/CMakeLists.txt
@@ -12,9 +12,16 @@ target_link_libraries(common_vehicle_model
 add_library(common::vehicle_model ALIAS common_vehicle_model)
 
 
+add_library(common_vehicle_model_module INTERFACE)
+target_link_libraries(common_vehicle_model_module INTERFACE
+        common_vehicle_model
+        )
+
 install(TARGETS common_vehicle_model
-LIBRARY DESTINATION lib
-ARCHIVE DESTINATION lib
-RUNTIME DESTINATION bin
-INCLUDES DESTINATION .
-)
+                common_vehicle_model_module
+        EXPORT  apollo-export
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION .
+        )
